Lines are interpolated between points, and added a new image dialogue

--- a/Spryt/Spryt.csproj
+++ b/Spryt/Spryt.csproj
@@ -63,11 +63,18 @@
     </Compile>
     <Compile Include="ImageInfo.cs" />
     <Compile Include="Layer.cs" />
+    <Compile Include="LineRasterEnumerator.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="NewImageDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NewImageDialog.Designer.cs">
+      <DependentUpon>NewImageDialog.cs</DependentUpon>
     </Compile>
     <Compile Include="Pixel.cs" />
     <Compile Include="Program.cs" />
@@ -77,6 +84,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NewImageDialog.resx">
+      <DependentUpon>NewImageDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
