--- a/Spryt/Spryt.csproj
+++ b/Spryt/Spryt.csproj
@@ -63,6 +63,7 @@
     </Compile>
     <Compile Include="CRC32.cs" />
     <Compile Include="DataGridViewLayerCell.cs" />
+    <Compile Include="EditAction.cs" />
     <Compile Include="GridOptionsDialog.cs">
       <SubType>Form</SubType>
     </Compile>
